# RoboSub

./: .gitignore  LICENSE  README.md  rosconsole.config
Electronics/Diptrace Libraries/: AVX.eli  AVX.lib  Diode.eli  Eaton.lib  Fairchild.eli  LittleFuse.eli  Maxim.eli  Nichicon.eli  Nichicon.lib  Panasonic.eli  TE.lib  TI.eli  littlefuse.lib  molex.eli  molex.lib  ~Eaton.lib~  ~LittleFuse.eli~  ~molex.eli~
Electronics/Fuel Guage/: Fuel Gauge.dch  Fuel Gauge.dip  Fuel Guage.dch  FuelGuageBoard-V1A.asc  README.txt  ~Fuel Gauge.dch~  ~Fuel Gauge.dip~  ~Fuel Guage.dch~
Electronics/Unifying Board/: Project_Jan11_0218AM.xls  Unifying Board-V2.dip  Unifying Board-V3.dip  Unifying Board-wrong.dip  Unifying Board.dch  Unifying Board.dip  ~Unifying Board-V2.dip~  ~Unifying Board-wrong.dip~  ~Unifying Board.dch~  ~Unifying Board.dip~
I2C/: I2C_Communication.h  I2C_Communication_Test.c  I2C_Master.c  I2C_Slave.ino
ucf_sub/: readme.md
ucf_sub/cmake_modules/: FindUCFUtilities.cmake
ucf_sub/src/sub_apps/sub_thruster_manager/: CMakeLists.txt  package.xml
ucf_sub/src/sub_apps/sub_thruster_manager/src/: sub_thruster_manager_node.cpp
ucf_sub/src/sub_bringup/: CMakeLists.txt  package.xml
ucf_sub/src/sub_bringup/launch/: robot.launch
ucf_sub/src/sub_bringup/launch/include/: applications.launch.xml  sensors.launch.xml  stereo_cameras.launch.xml
ucf_sub/src/sub_bringup/launch/include/sensors/: bottom_camera.launch.xml  stereo_cameras.launch.xml
ucf_sub/src/sub_bringup/udev/: 60-pgr.rules
ucf_sub/src/sub_definition/: CMakeLists.txt  package.xml
ucf_sub/src/sub_definition/launch/: viewsub.launch
ucf_sub/src/sub_definition/robots/: ucf_robosub.urdf.xacro
ucf_sub/src/sub_definition/urdf/: sub_arm.urdf.xacro  sub_body.urdf.xacro  sub_thruster.urdf.xacro  vision_cam.urdf.xacro
ucf_sub/src/sub_drivers/blue_robotics_t200/: CMakeLists.txt  package.xml
ucf_sub/src/sub_drivers/blue_robotics_t200/include/blue_robotics_t200/: t200_thruster.h
ucf_sub/src/sub_drivers/blue_robotics_t200/src/: t200_thruster.cpp
ucf_sub/src/sub_move_controller/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
ucf_sub/src/sub_move_controller/action/: MoveCommand.action  MoveCommand.action~
ucf_sub/src/sub_move_controller/src/: move_client.cpp  move_client.cpp~  move_controller.cpp  move_controller.cpp~
ucf_sub/src/sub_simulator/robosub_gazebo_interface/: CMakeLists.txt  package.xml
ucf_sub/src/sub_simulator/robosub_gazebo_interface/launch/: subsim.launch
ucf_sub/src/sub_simulator/robosub_gazebo_interface/models/ucf_robosub_simple/: model.config  ucf_submarine_simple.sdf
ucf_sub/src/sub_simulator/robosub_gazebo_interface/src/: robosub_gazebo_interface.cpp  robosub_gazebo_interface.hpp
ucf_sub/src/sub_simulator/robosub_gazebo_interface/worlds/: simulate_empty.world
ucf_sub/src/sub_states/: CMakeLists.txt  main.py  package.xml
ucf_sub/src/sub_states/launch/: sub_states.launch
ucf_sub/src/sub_states/src/: gate.py  main.py
ucf_sub/src/sub_teleop/sub_joystick_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ucf_sub/src/sub_teleop/sub_joystick_control/launch/: dualjoy.launch
ucf_sub/src/sub_teleop/sub_joystick_control/src/: dual_stick_control.cpp  dual_stick_control.cpp~  thrust_control.cpp~
ucf_sub/src/sub_trajectory/: CMakeLists.txt  package.xml
ucf_sub/src/sub_trajectory/action/: ExecuteWaypoint.action  GoToPose.action
ucf_sub/src/sub_trajectory/launch/: sub_trajectory.launch
ucf_sub/src/sub_trajectory/src/: thruster_control_server.py  trajectory_planner.py
ucf_sub/src/sub_vision/: CMakeLists.txt  package.xml  thresholds.json
ucf_sub/src/sub_vision/action/: TrackObject.action
ucf_sub/src/sub_vision/launch/: sub_vision.launch
ucf_sub/src/sub_vision/src/: bouyfinder.py  gatefinder.py  navbarfinder.py  vision_manager.py  vision_utils.py
