<?xml version="1.0"?>
<package>
    <name>ucf_sub_definition</name>
    <version>0.0.0</version>
    <description>UCF RoboSub robot description package</description>
    
    <maintainer email="npeters2014@knights.ucf.edu">Nicholas</maintainer>
    
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>urdf</build_depend>
    <build_depend>xacro</build_depend>
    <run_depend>urdf</run_depend>
    <run_depend>xacro</run_depend>
</package>
