<?xml version="1.0"?>
<package>
  <name>robosub_gazebo_interface</name>
  <version>0.5.0</version>
  <description>The robosub_gazebo_interface package</description>
  <maintainer email="npeters2014@knights.ucf.edu">Nicholas Peters</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/robosub_gazebo_interface</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
